Add test for CardHolder